# Ros2

./: .gitignore  README.md  TE3001B.docx  my_robot.urdf  ~$E3001B.docx
Activity 3/motor_control/: setup.py
Final Challenge/: MCR2_TE3001B_Rubric_Final_Challenge.docx
Week 1/Challenge/: MCR2_MiniChallenge_1.pptx
Week 2/Challenge/: MCR2_MiniChallenge_V3.pptx
Week 2/Presentations/: MCR2_ROS_Practicalities.pptx  MCR2_ROS_Practicalities_V2.pptx
Week 3/Presentations/: MCR2_Micro_ROS_Installation.pptx
Week 4/: MCR2_Open_Loop_Control.pptx  MCR2_QoS_ROS.pptx
chall_2/: package.xml  setup.cfg  setup.py
chall_2/chall_2/: ctrl.py
chall_2/config/: controller_params.yaml
chall_2/launch/: controller_launch.py
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_srvcli/: package.xml
differential_drive/: package.xml  setup.py
differential_drive/differential_drive/: differential_drive_controller.py  differential_drive_node.py
differential_drive/launch/: differential_drive_launch.py
gazebo_puzzlebot_sim/: package.xml  setup.cfg  setup.py
gazebo_puzzlebot_sim/config/: path.yaml
gazebo_puzzlebot_sim/gazebo_puzzlebot_sim/: sim_node.py
gazebo_puzzlebot_sim/launch/: gazebo_world_launch.py  sim_launch.py
gazebo_puzzlebot_sim/worlds/: puzzlebot_world.worlds
line_tracer_cmdvel/: package.xml  setup.cfg  setup.py
omni3_controller_pkg/: package.xml  setup.cfg  setup.py
puzzlebot_sim/: package.xml  setup.py
py_pubsub/: package.xml  setup.py
py_srvcli/: package.xml  setup.py
signal_processing/: package.xml  setup.py
turtle_tf2_broadcaster/: package.xml  setup.cfg  setup.py
turtle_tf2_broadcaster/turtle_tf2_broadcaster/: turtle_pose_transform.py
(+57 files in other folders)
