<?xml version="1.0"?>
<package format="2">
  <name>turtle_tf2_broadcaster</name>
  <version>0.0.0</version>
  <description>Paquete para transformar la posición de turtle a tf2.</description>

  <maintainer email="felipe@todo.todo">felipe</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>turtlesim</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
